book/tests/snapshots/snapshot__@queries__dialect-and-version-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\n\nfrom employees\nsort age\ntake 10\n"
input_file: book/tests/prql/queries/dialect-and-version-0.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  age
LIMIT
  10
