book/tests/snapshots/snapshot__@queries__syntax-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees | filter department == \"Product\" | select [first_name, last_name]\n"
input_file: book/tests/prql/queries/syntax-1.prql
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'
