book/tests/snapshots/snapshot__@queries__syntax-10.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
input_file: book/tests/prql/queries/syntax-10.prql
---
SELECT
  "first name"
FROM
  employees
