book/tests/snapshots/snapshot__@queries__syntax-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees  # Comment 1\n# Comment 2\naggregate [average salary]\n"
input_file: book/tests/prql/queries/syntax-6.prql
---
SELECT
  AVG(salary)
FROM
  employees
