book/tests/snapshots/snapshot__@queries__variables-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "let top_50 = (\n  from employees\n  sort salary\n  take 50\n  aggregate [total_salary = sum salary]\n)\n\nfrom top_50      # Starts a new pipeline\n"
input_file: book/tests/prql/queries/variables-0.prql
---
WITH table_1 AS (
  SELECT
    salary
  FROM
    employees
  ORDER BY
    salary
  LIMIT
    50
), top_50 AS (
  SELECT
    SUM(salary) AS total_salary
  FROM
    table_1 AS table_0
)
SELECT
  total_salary
FROM
  top_50

